test of syncmail and connectivity to hsqldb-cvs maillist--TEST ONE

--- a/base-one/trunk/doc/changelog.txt
+++ b/base-one/trunk/doc/changelog.txt
@@ -1,3 +1,8 @@
+1/15/2003 CHANGE
+THIS IS A TEST
+Added syncmail script...testing hsqldb-cvs@lists.sourceforge.net
+TEST COMPLETE
+
 HSQLDB version 1.7.1 CHANGELOG SINCE VERSION 1.60
 
 Version 1.7.1 improves performance and fixes several bugs that have come to light since the release of 1.7.0. It does not feature any major new functionality in the database engine.
