pre ALPHA_N updates

--- a/base-one/trunk/src/org/hsqldb/resources/data-type-names_de.properties
+++ b/base-one/trunk/src/org/hsqldb/resources/data-type-names_de.properties
@@ -12,7 +12,7 @@ DECIMAL=DEZIMALE ZAHL
 DISTINCT=EINDEUTIG
 DOUBLE=DOPPELTE PRECISON ZAHL 
 FLOAT=GLEITKOMMA-ZAHL
-IDENTITY=GANZZAHL IDENTITÄT
+INTEGER_IDENTITY=GANZZAHL IDENTITÄT
 INTEGER=GANZZAHL
 JAVA_OBJECT=JAVA GEGENSTAND
 LONGVARBINARY=LANGES BINÄRES VERÄNDERN 
@@ -31,3 +31,5 @@ VARCHAR=BUCHSTABE VERÄNDERN
 XML=AUSDEHNBAR PREISAUFSCHLAG-SPRACHE
 REF=HINWEIS
 TIMESTAMP=ZEITSTEMPEL
+
+BIGINT_IDENTITY=BIGINT IDENTIT\u00C4T
