--- a/base-one/trunk/src/org/hsqldb/resources/data-type-names_fr.properties
+++ b/base-one/trunk/src/org/hsqldb/resources/data-type-names_fr.properties
@@ -12,7 +12,7 @@ DECIMAL=NOMBRE DÉCIMAL
 DISTINCT=DISTINCT
 DOUBLE=NOMBRE EN DOUBLE PRÉCISION
 FLOAT=NOMBRE DE VIRGULE FLOTTANTE
-IDENTITY=IDENTITÉ DE NOMBRE ENTIER
+INTEGER_IDENTITY=IDENTITÉ DE NOMBRE ENTIER
 INTEGER=NOMBRE ENTIER
 JAVA_OBJECT=OBJET DE JAVA
 LONGVARBINARY=LONG CHANGER BINAIRE
@@ -31,3 +31,5 @@ VARCHAR=CHANGER DE CARACTÈRE
 XML=SUJET À SAISIE LANGUE DE MARGE BÉNÉFICIAIRE BÉNÉFICIAIRE 
 REF=R\u00C9F\u00C9RENCE
 TIMESTAMP=HORODATEUR
+
+BIGINT_IDENTITY=IDENTIT\u00C9 DE BIGINT
