--- a/base-one/trunk/src/org/hsqldb/resources/data-type-names_it.properties
+++ b/base-one/trunk/src/org/hsqldb/resources/data-type-names_it.properties
@@ -12,7 +12,7 @@ DECIMAL=NUMERO DECIMALE
 DISTINCT=DISTINTO
 DOUBLE=NUMERO DI DOPPIA PRECISIONE
 FLOAT=NUMERO DELLA VIRGOLA MOBILE
-IDENTITY=IDENTITÀ DI NUMERO INTERO
+INTEGER_IDENTITY=IDENTITÀ DI NUMERO INTERO
 INTEGER=NUMERO INTERO
 JAVA_OBJECT=JAVA_OBJECT
 LONGVARBINARY=VARIAZIONE BINARIA LUNGA
@@ -31,3 +31,5 @@ VARCHAR=VARIAZIONE DEL CARATTERE
 XML=ESTENDIBILE LINGUA DI MARGINE DI PROFITTO 
 REF=RIFERIMENTO
 TIMESTAMP=BOLLO DI TEMPO
+
+BIGINT_IDENTITY=BIGINT IDENTITY
