--- a/base-one/trunk/src/org/hsqldb/resources/sql-error-messages_it.properties
+++ b/base-one/trunk/src/org/hsqldb/resources/sql-error-messages_it.properties
@@ -204,8 +204,8 @@
 198=S1000 Errore nella chiamata alla funzione
 199=27000 Violazione nel cambio di dati da trigger
 200=37000 Argomento non valido
-201=S1000 Errore Interno. Tipo di comando SQL sconosciuto:
-202=S1000 Errore Interno. Tipo sconosiuto di operazione in sessione :
+201=S1000 Errore Interno. Tipo di comando sconosciuto :
+202=NA
 203=S1000 prepared statement non pi\u00f9 valido
 204=interpretazione del comando di trigger\u0020
 205=S3000 trigger o funzione non nel cammino
