--- a/base-one/trunk/src/org/hsqldb/resources/sql-error-messages_it.properties
+++ b/base-one/trunk/src/org/hsqldb/resources/sql-error-messages_it.properties
@@ -1,6 +1,6 @@
 # Copyright 2005 HSQL Developers Group
 # can be distributed and used according to HSQLDB License
-# see http://hsqldb.sourceforge.net
+# see http://hsqldb.org
 # Italian translation by Nicola Pedot (http://www.jugtrento.org/)
 # JRC-Editor by http://zavel.org
 000=NOT USED
@@ -108,7 +108,7 @@
 102=colonna duplicata nella lista
 103=tabella senza chiave primaria
 104=23000 Violazione del vincolo di unicit\u00e0
-105=manca il valore DEFAULT sulla colonna $$
+105=S2001 manca il valore DEFAULT sulla colonna $$
 106=S1000 valore NULL come BOOLEAN
 107=tentativo di connessione mentre l'archivio si stava aprendo/chiudendo
 108=NA
@@ -200,7 +200,7 @@
 194=23000 Tabella referenziata dalla vista
 195=NA
 196=S1000 Testo sorgente gi\u00e0 esistente
-197=23000 Colonna referenziata nel vincolo
+197=23000 Colonna referenziata nel vincolo o vista
 198=S1000 Errore nella chiamata alla funzione
 199=27000 Violazione nel cambio di dati da trigger
 200=37000 Argomento non valido
