--- a/base-one/trunk/src/org/hsqldb/resources/sql-error-messages_it.properties
+++ b/base-one/trunk/src/org/hsqldb/resources/sql-error-messages_it.properties
@@ -154,7 +154,7 @@
 149=Indirizzo non valido : $$
 150=22001 Testata (Header) non ammessa o troppo lunga
 151=NA
-152=NA
+152=00000 Parameter not set
 153=00000 LIMIT o TOP non ammesso
 154=00000 Il comando (statement) non genera un conteggio di riga
 155=00000 Il comando (statement) non genera un result set
