Frank Shoenheit's enhancements to text tables.

--- a/base-one/trunk/src/org/hsqldb/resources/sql-error-messages_it.properties
+++ b/base-one/trunk/src/org/hsqldb/resources/sql-error-messages_it.properties
@@ -257,4 +257,5 @@
 252=37000 colonna parte di un vincolo
 253=37000 richiesta dimensione di colonna
 254=37000 precisione o dimensione non valida
-255=LAST
+255=22001 The table cannot be disconnected from its data source
+256=LAST
