--- a/base-one/trunk/src/org/hsqldb/util/sqltool_de.properties
+++ b/base-one/trunk/src/org/hsqldb/util/sqltool_de.properties
@@ -1,4 +1,4 @@
-# $Id: sqltool_de.properties 337 2007-07-09 03:24:23Z unsaved $
+# $Id: sqltool_de.properties 340 2007-07-24 04:04:00Z unsaved $
 
 # IMPORTANT:  Make sure to use ISO-8859-1 encoding for any extended characters,
 # both in this file (actually any .properties file) and all referenced text
@@ -65,7 +65,6 @@ rollingback: Die Transaktion wird Rollback.
 bufhist.unspecified: Kein Befehl spezifiziert.  Laufen Sie ":?" ab, die Editpuffer/Geschichte Befehle zu listen!
 special.unspecified: Kein Befehl spezifiziert.  Laufen Sie "\\?", die Specialbefehle zu listen!
 buffer.executing: Befehl ausführt von Editpuffer:\u000a"%{1}"\u000a
-executing: Befehl ausführt:\u000a"%{1}"\u000a
 nobuffer.yet: Noch kein Pufferinhalt.
 commandnum.malformat: Malformatted Befehl Nr. "%{1}".
 buffer.restored: Stellte den folgenden Befehl zum Puffer wieder her.\u000a\
@@ -211,3 +210,4 @@ insertions.notcommitted: Einfügungen sind verloren, wenn du nicht commit.
 autocommit.fetchfail: Konnte Anschluß autocommit Wert erhalten nicht.
 dsv.rejectfile.purgefail:Konnte nicht notwendige Ausschußdatei '%{1}' bereinigen nicht.
 dsv.rejectreport.purgefail: Konnte nicht notwendige Ausschußreport '%{1}' bereinigen nicht.
+edit.malformat: Malformatted Pufferbefehl.
