File access classloader update

--- a/base-one/trunk/src/org/hsqldb/resources/sql-error-messages_it.properties
+++ b/base-one/trunk/src/org/hsqldb/resources/sql-error-messages_it.properties
@@ -258,4 +258,6 @@
 253=37000 richiesta dimensione di colonna
 254=37000 precisione o dimensione non valida
 255=22001 The table cannot be disconnected from its data source
-256=LAST
+256=S1000 invalid file access class: $$
+257=S1000 invalid storage class: $$
+258=LAST
