--- a/odbc/trunk/doc/todo.txt
+++ b/odbc/trunk/doc/todo.txt
@@ -34,11 +34,15 @@ ELIMINATE CODE FOR FOLLOWING CAPABILITIES, WHICH WE WILL NEVER NEED.
     libpq  (PostgreSQL-specific C API).  NOT_USE_LIBPQ true.
      (Judging by the ifdefs in connection.c, sspi is require even on the UNIX
      client in order to have SSL ability????)
+* Occurs in Makefile* (all but *.am derived), *.dsp, *.rc, *.vcproj win*.mak
     Any version-specific code for protocols other than PG_PROTOCOL_74.  All
      tests for versions after/greater something apply to us, since we are
      using the latest protocol.
     Function call stuff.  Both PostgreSQL-specific, and legacy.
+* Wipe connection.c:CC_send_function
     Non- conninfo[_]->use_server_side_prepare, since we always use server-side
      prepares.
     use_declarefetch usage. (based on "Use Declare/Fetch" driver setting.
      DECLARE/FETCH/MOVE/CLOSE commands needed to support this.
+    SSPI
+* Occurs in Makefile* (all but *.am derived), **.vcproj win*.mak
