All useful information gleaned from psqlodbc's unix-compilation.html file. HyperSQL-specific unix-build.txt updated and unix-compilation.html removed.

--- a/odbc/trunk/doc/todo.txt
+++ b/odbc/trunk/doc/todo.txt
@@ -1,10 +1,10 @@
 $Id$
 
-Try taking screen shots of Windows DSN settings from XP.
-
 Update DocBook docs with content of my *.txt files.
 
 Track down bytea as LO setting.  Understand then eliminate it.
+
+Add screen shots of both Windows DSN option screens.
 
 Pull remaining pieces of *build*.html files into my *build*.txt files so can
 remove the former.
