Generalized the Windows builds to a large extent. Windows deliverables now clearly distinguish the target system requirements. Driver version incremented to 1.9.0.3.

--- a/odbc/trunk/doc/todo.txt
+++ b/odbc/trunk/doc/todo.txt
@@ -27,6 +27,9 @@ default of MaxVarchar from 255 to 0.
 
 --------------
 
+After implement SSL again, get rid of all occurrences of "libpq", including
+setting of and #ifdefs of NOT_USE_LIBPQ.
+
 Abort processing at
 connection.c:CC_send_query_append(), op switch for op 'Z'.
 This state is very likely to result in deadlock.
