--- a/odbc/trunk/doc/todo.txt
+++ b/odbc/trunk/doc/todo.txt
@@ -19,6 +19,13 @@ drivers, it may not make sense to default (or possibly support at all)
 
 Run the Microsoft ODBC test.
 
+Find out why hsqlodbc and psqlodbc both invoke the non-Unicode version of
+SQLSetConnectAttr instead of SQLSetConnectAttrW, thereby setting the
+conn->unicode to false and making CC_is_in_unicode_driver return false even
+though it is a unicode driver.  [Diagnostics so far:  the ODBC version stored
+in conn->driver_version is correct.  Problem occurs even when connecting to
+a Postgresql UTF database with psqlodbc].
+
 --------------
 
 After implement SSL again, get rid of all occurrences of "libpq", including
