starting down the long, long path of localized category and description attributes.

--- a/dotnet/trunk/System.Data.Hsqldb/System.Data.Hsqldb.Common/Properties/Resources.resx
+++ b/dotnet/trunk/System.Data.Hsqldb/System.Data.Hsqldb.Common/Properties/Resources.resx
@@ -117,7 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Dbconnection_ConnectionString" xml:space="preserve">
+	<data name="ResCategory_Data" xml:space="preserve">
+    <value><![CDATA[Data]]></value>
+  </data>	
+  <data name="DbCommand_StatementCompletedEventHandler" xml:space="preserve">
+    <value><![CDATA[Statement Completed Event]]></value>
+  </data>	
+  <data name="DbConnection_ConnectionString" xml:space="preserve">
     <value><![CDATA[Controls how an open connection is established.]]></value>
   </data>
   <data name="DbConnection_Database" xml:space="preserve">
